# thundergbm

./: .gitignore  .gitmodules  CMakeLists.txt  DatasetInfo.h  GBDTMain.cpp  Makefile  MyAssert.h  NodeStat.h  Predictor.cpp  Predictor.h  PrintTree.cpp  Pruner.cpp  Pruner.h  README.md  RegTree.cpp  RegTree.h  SplitPoint.cpp  SplitPoint.h  Splitter.cpp  Splitter.h  Trainer.cpp  Trainer.h  TreeNode.cpp  TreeNode.h  auto-test.py  gbdt_main.cpp  gbdt_main.cu  keyValue.h  myrun-gbdt.sh  run.sh  small-run.sh  syncarray.cpp  syncarray.h  syncmem.cpp  syncmem.h  train_run.sh
DataReader/: LibSVMDataReader.cpp  LibSVMDataReader.h
Device/: DeviceHashing.cu  DeviceHashing.h  DevicePredictor.cu  DevicePredictor.h  DevicePredictorHelper.cu  DevicePredictorHelper.h  DeviceTrainer.cu  DeviceTrainer.h  ErrorChecker.cu  Hashing.cu  Hashing.h  KernelConf.cu  KernelConf.h  KernelConst.h  Preparator.cpp  Preparator.h  initCuda.cu  initCuda.h  partialSum.h  prefixSum.cu  prefixSum.h
Device/Bagging/: BagBuilder.cpp  BagBuilder.h  BagCsrManager.cu  BagCsrManager.h  BagManager.cu  BagManager.h  BagOrgManager.cu  BagOrgManager.h
Device/CSR/: BagCsrManager.cu  BagCsrManager.h  CsrCompressor.cu  CsrCompressor.h  CsrSplit.cu  CsrSplit.h
Device/FileBuffer/: FileBuffer.cpp  FileBuffer.h
Device/FindSplit/: ComputeGD.cu  ComputeGain.cu  ComputeGainDense.cu  CsrSplit.cu  CsrSplit.h  FindBestFead.cu  FindFea.cu  FindFeaCsr.cu  FindFeaKernel.cu  FindFeaKernel.h  FindFeaOrg.cu  FindFeaUtility.cu  IndexComputer.cpp  IndexComputer.cu  IndexComputer.h  PickBestSplit.cu
Device/GPUTask/: Communicator.h  GBDTTask.cu  GBDTTask.h  GPUTask.cpp  GPUTask.h
Device/Memory/: SNMemManager.h  SNMemManger.cu  SplitNodeMemManager.h  SplitNodeMemManger.cu  dtMemManager.cu  dtMemManager.h  findFeaMemManager.cu  findFeaMemManager.h  gbdtGPUMemManager.cu  gbdtGPUMemManager.h  gpuMemManager.cu  gpuMemManager.h
Device/Splitter/: DeviceFindFeaKernel.h  DeviceSplitAllKernel.h  DeviceSplitter.h  FindFea.cu  FindFeaKernel.cu  Initiator.cu  Initiator.h  SplitAll.cu  SplitAllKernel.cu
Device/prefix-sum/: partialSum.cu  partialSum.h  prefixSum.cu  prefixSum.h  prefixSum_unitTest.cu
Device/svm-shared/: HostUtility.h  MemInfo.cu  MemInfo.h  devUtility.cu  devUtility.h  getMin.cu  getMinPreprocessing.cu  storageManager.h
DeviceHost/: DefineConst.h  MyAssert.h  NodeStat.h  TreeNode.h
DeviceHost/BaseClasses/: BasePredictor.cpp  BasePredictor.h  BaseSplitter.cpp  BaseSplitter.h  BaseTrainer.cpp  BaseTrainer.cu  BaseTrainer.h
DeviceHost/SparsePred/: DenseInstance.cpp  DenseInstance.h
DeviceHost/svm-shared/: DeviceUtility.h  MemInfo.cu  fileOps.cpp  fileOps.h  getMin.cu  getMinPreprocessing.cu  hostStorageManager.cpp  storageManager.cu
Evaluation/: RMSE.h
Host/: GBDTCmdLineParser.cpp  GBDTCmdLineParser.h  GDPair.h  HostPredictor.cpp  HostPredictor.h  HostTrainer.cpp  HostTrainer.h  KeyValue.cpp  KeyValue.h  PureHostGBDTMain.cpp  PureHostGBDTMain.h  commandLineParser.cpp  commandLineParser.h
Host/DataReader/: BaseLibsvmReader.cpp  BaseLibsvmReader.h  LibsvmReaderSparse.cpp  LibsvmReaderSparse.h
Host/Evaluation/: RMSE.cpp  RMSE.h
Host/Tree/: PrintTree.cpp  PrintTree.h  RegTree.cpp  RegTree.h
Host/UpdateOps/: HostSplitter.cpp  HostSplitter.h  NodeStat.h  Pruner.cpp  SplitPoint.h
R/: README.md  gbm.R
SharedUtility/: CudaMacro.h  DataType.h  DeviceUtility.h  KernelConf.cu  KernelConf.h  KernelMacro.h  KeyValue.cpp  KeyValue.h  binarySearch.cu  getMin.cu  getMin.h  initCuda.cu  memVector.cu  memVector.h  segmentedMax.h  segmentedSum.h  setSegmentKey.cu  setSegmentKey.h
SharedUtility/DataReader/: LibsvmReaderSparse.h
SparsePred/: DenseInstance.cpp  DenseInstance.h
dataset/: machine.conf  test_dataset.txt.group
docs/: Makefile  README.md  conf.py  faq.md  how-to.md  index.md  make.bat  parameters.md  requirements.txt
docs/_static/: default.css
gpu/: DeviceHashing.cu  DeviceHashing.h  DevicePrediction.cu  DevicePrediction.h  DeviceSplitter.cu  DeviceSplitter.h  DeviceSplitterKernel.cu  DeviceSplitterKernel.h  DeviceTrainer.cu  DeviceTrainer.h  ErrorChecker.cu  ErrorChecker.h  Hashing.cu  Preparator.cpp  Preparator.h  gbdtGPUMemManager.cu  gbdtGPUMemManager.h  gpuMemManager.cu  gpuMemManager.h  initCuda.cu
gpu/Memory/: SplitNodeMemManager.h  SplitNodeMemManger.cu  dtMemManager.cu  dtMemManager.h  gbdtGPUMemManager.cu  gbdtGPUMemManager.h  gpuMemManager.cu  gpuMemManager.h
gpu/Splitter/: DeviceFindFeaKernel.h  DevicePredKernel.h  DeviceSplitAllKernel.h  DeviceSplitter.cu  DeviceSplitter.h  DeviceSplitterKernel.cu  DeviceSplitterKernel.h  DeviceSplitterSplitNode.cu  FillDenseInsKernel.cu  FindFea.cu  FindFeaKernel.cu  Initiator.cu  Initiator.h  SplitAll.cu  SplitAllKernel.cu
include/thundergbm/: booster.h  clion_cuda.h  common.h  config.h.in  dataset.h  (+15 more)
pureHost/: BaseTrainer.cpp  BaseTrainer.h  HostPredictor.cpp  HostPredictor.h  HostTrainer.cpp  HostTrainer.h  KeyValue.cpp  KeyValue.h  MyAssert.h  Predictor.cpp  Predictor.h  PureHostGBDTMain.cpp  PureHostGBDTMain.h  Trainer.cpp  Trainer.h
python/: README.md  requirements.txt  setup.py  tgbm_test.py  thundergbm_scikit.py
src/thundergbm/: CMakeLists.txt  dataset.cpp  dataset.cu  fasttree_train.cpp  gbm_R_interface.cpp  hist_cut.cpp  hist_cut.cu  ins_stat.cu  param_parser.cpp  parser.cpp  predictor.cpp  predictor.cu  quantile_sketch.cpp  row_sampler.cu  scikit_tgbm.cpp  shard.cu  sparse_columns.cu  syncarray.cpp  syncmem.cpp  thundergbm_predict.cpp  thundergbm_train.cpp  trainer.cu  tree.cpp  tree.cu
src/thundergbm/builder/: exact_tree_builder.cu  function_builder.cu  hist_tree_builder.cu  hist_tree_builder_single.cu  shard.cu  tree_builder.cu
src/thundergbm/metric/: metric.cu  multiclass_metric.cu  pointwise_metric.cu  rank_metric.cpp  rank_metric.cu
src/thundergbm/objective/: multiclass_obj.cu  objective_function.cu  ranking_obj.cpp  ranking_obj.cu
src/thundergbm/updater/: exact_tree_builder.cu  exact_updater.cu  function_builder.cu  hist_tree_builder.cu  hist_updater.cu  shard.cu
src/thundergbm/util/: common.cpp  log.cpp
(+89 files in other folders)
